static/styles.css
.main {
    background-color:#FFF;
}

/* Navbar */

/* Index */
.hero {
    height:60vh;
    width:100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: #FFDEAD;
}

.hero-text {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.content-search {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items:center;
    height:40vh;
    background-image: url("shelf.jpg");
}

.content-search-2 {
    height:100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    
    background-color: lightblue;
}

.content-2 {
    margin-top:30px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width:50%;
}

.intro-text {
    display: flex;
    justify-content: center;
}

/* Search bar */
.search-box {
    margin-top:60px;
    width:100%;
    display:flex;
    flex-direction: column;
    justify-content: center;
}

.search-bar {
    display: flex;
    justify-content: center;
}

.form-group {
    width:100%;
    display: flex;
    flex-direction: row;   
}

/* Bestsellers carousel */
.slider {
    display:flex;
    justify-content: center;
    flex-direction: column;
}

.index-slider {
    display:flex;
    justify-content: center;
    height:10%;
    width:100%;
}

.footer {
    display:flex;
    justify-content: center;
}

.footer-items {
    margin-top:5%;
    display:flex;
    flex-direction: row;
}

/* Search results */
.search-title {
    letter-spacing: 1mm;
    padding:20px;
    color: #000000;
    text-shadow: 2px 3px 6px rgba(45,45,45,0.8);
}

.container {
    display: flex;
    flex-direction: column;
    align-items:center;
    border-left-width: 2px;
    border-left-style: solid;
    border-left-color: rgb(242, 242, 242);
    
    border-right-width: 2px;
    border-right-style: solid;
    border-right-color: rgb(242, 242, 242);
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;

    border-width: 2px;
    border-style: solid;
    border-color: rgb(242, 242, 242);

  }

.result {
    display:flex;
    flex-direction:row;
    justify-content: flex-start;
    width:50em;
    height:10em;

    border-bottom-width: 2px;
    border-bottom-style: solid;
    border-bottom-color: rgb(242, 242, 242);
    
    
}

/* Container for search results */
.result-row {
    display:flex;
    align-items: flex-start;
    width:100%;
}

.result-col-left {
    width:150px;
    background-color: #FFF;
}

.result-col-middle {
    display:flex;
    flex-direction:row;
    width:500px;
}

.book-img {
    display:flex;
    width:100px;
    margin-top: 20px;
    padding:10px;
    padding-top: 0px;
}

.bookcover {
    display:flex;
    align-self: flex-start;
    background-color:white;
    background-image: url("book.jpg");
    background-size: contain;
    background-repeat: no-repeat;
    width:95%;
    height:90%;
    
}

.book-info {
    width:400px;
    display:flex;
    flex-direction: column;
    justify-content: flex-start;
    margin-top: 20px;
}

.book-title {
    font-size:18px;
    margin-bottom:0;
}

.book-title > a,
.book-title > a:hover  {
    color: #000000;
    font-weight: bold;
}

.book-year-isbn {
    color:darkgrey;
}

.book-year-isbn, 
.book-author {
    margin:2px;
}

.result-col-right {
    display:flex;
    flex-direction: column;
    justify-content: flex-start;
    padding-top: 20px;
}


/* Book page */
.book-container {
    display:flex;
    margin-top:3%;
}

.book-info-cover {
    display: flex;
    justify-content: center;
    width: 33%;
    height:100vh;
}

.book-info-description {
    padding-bottom:20px;
    border-bottom-width: 2px;
    border-bottom-style: solid;
    border-bottom-color: rgb(242, 242, 242);
}

/* Container */
.cover {
    display:flex;
    justify-content: center;
    height:100vh;
    width:400px;
    border-right-width: 2px;
    border-right-style: solid;
    border-right-color: rgb(242, 242, 242);
}

.cover-img {
    margin-top:20px;
    height:313px;
    width:201px;
    background-image: url("book.jpg");
    background-size: contain;
    background-repeat: no-repeat;
    border-style:none;
    border-width:20px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.book-name {
    color: #000000;
    text-shadow: 2px 3px 6px rgba(45,45,45,0.8);
}

.book-info-content {
    width: 67%;
    height:100vh;
}

.book-info-col {
    display: flex;
    flex-direction: column;
    width:90%;
}

.author-isbn {
    margin-top: 10px;
    margin-bottom: 10px;
    padding-bottom:10px;

    border-bottom-width: 2px;
    border-bottom-style: solid;
    border-bottom-color: rgb(242, 242, 242);
}

.book-isbn {
    font-style: italic;
}
.author {
    text-decoration: underline;
}

.rating {
    font-weight: bold;
    margin-top: 10px;
    margin-bottom: 10px;
}

.rating > #rating {
    font-weight: normal;
}

/* Reviews */
.review-container {
    height:10px;
    background-color: grey;
    border-style: solid;
    border-width: 2px;
    border-style: solid;
    border-color: rgb(242, 242, 242);
    
}


/* Cards */
.card-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-self: center;
    width:40%;
    background-color: yellowgreen;
}

.header {
    padding:10px;
    display:flex;
    justify-content: center;
    color:white;
    background-color: teal;
}
.card-row {
    padding:25px;
    display: flex;
    justify-content: space-around;
}

.card {
    height:133px;
    width:100px;
    background-color: yellow;
}

